--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,9 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "flet (>=0.28.3,<0.29.0)",
-    "pycryptodome (>=3.23.0,<4.0.0)"
+    "pycryptodome (>=3.23.0,<4.0.0)",
+    "mysql-connector-python (>=9.3.0,<10.0.0)",
+    "python-dotenv (>=1.1.1,<2.0.0)"
 ]
 
 [tool.poetry]
